// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multi slider default render 1`] = `
<View>
  <DefaultLabel
    labelTextColor="#ffffff"
    oneMarkerLeftPosition={28}
    oneMarkerValue={10}
    twoMarkerLeftPosition={224}
    twoMarkerValue={80}
  />
  <ImageBackground
    source="https://www.google.com.hk/images/branding/googlelogo/2x/googlelogo_color_92x30dp.png"
    style={
      Array [
        Object {
          "height": "100%",
          "width": "100%",
        },
        Array [
          Object {
            "height": 50,
            "justifyContent": "center",
            "position": "relative",
          },
          undefined,
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          Object {
            "width": 280,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#3D3E43",
              "borderRadius": 6,
              "height": 6,
            },
            undefined,
            undefined,
            Object {
              "width": 28,
            },
          ]
        }
      />
      <View
        onMoveShouldSetResponder={[Function]}
        onMoveShouldSetResponderCapture={[Function]}
        onResponderEnd={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderReject={[Function]}
        onResponderRelease={[Function]}
        onResponderStart={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        onStartShouldSetResponderCapture={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "#3D3E43",
              "borderRadius": 6,
              "height": 6,
            },
            undefined,
            Object {
              "backgroundColor": "#095FFF",
            },
            Object {
              "width": 196,
            },
          ]
        }
      />
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#3D3E43",
              "borderRadius": 6,
              "height": 6,
            },
            undefined,
            undefined,
            Object {
              "width": 56,
            },
          ]
        }
      />
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "height": 48,
              "justifyContent": "center",
              "position": "absolute",
              "width": 48,
            },
            Object {
              "left": 4,
              "top": -24,
            },
            undefined,
            false,
          ]
        }
      >
        <View
          onMoveShouldSetResponder={[Function]}
          onMoveShouldSetResponderCapture={[Function]}
          onResponderEnd={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderReject={[Function]}
          onResponderRelease={[Function]}
          onResponderStart={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onStartShouldSetResponderCapture={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "backgroundColor": "transparent",
                "justifyContent": "center",
              },
              Object {
                "borderRadius": 15,
              },
            ]
          }
        >
          <DefaultMarker
            currentValue={10}
            enabled={true}
            size={12}
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "height": 48,
              "justifyContent": "center",
              "position": "absolute",
              "width": 48,
            },
            Object {
              "right": 32,
              "top": -24,
            },
            undefined,
          ]
        }
      >
        <View
          onMoveShouldSetResponder={[Function]}
          onMoveShouldSetResponderCapture={[Function]}
          onResponderEnd={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderReject={[Function]}
          onResponderRelease={[Function]}
          onResponderStart={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onStartShouldSetResponderCapture={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "backgroundColor": "transparent",
                "justifyContent": "center",
              },
              Object {
                "borderRadius": 15,
              },
            ]
          }
        >
          <DefaultMarker
            currentValue={80}
            enabled={true}
            size={12}
          />
        </View>
      </View>
    </View>
  </ImageBackground>
</View>
`;

exports[`multi slider no bg 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "height": 50,
          "justifyContent": "center",
          "position": "relative",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          Object {
            "width": 280,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#3D3E43",
              "borderRadius": 6,
              "height": 6,
            },
            undefined,
            undefined,
            Object {
              "width": 28,
            },
          ]
        }
      />
      <View
        onMoveShouldSetResponder={[Function]}
        onMoveShouldSetResponderCapture={[Function]}
        onResponderEnd={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderReject={[Function]}
        onResponderRelease={[Function]}
        onResponderStart={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        onStartShouldSetResponderCapture={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "#3D3E43",
              "borderRadius": 6,
              "height": 6,
            },
            undefined,
            Object {
              "backgroundColor": "red",
            },
            Object {
              "width": 196,
            },
          ]
        }
      />
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#3D3E43",
              "borderRadius": 6,
              "height": 6,
            },
            undefined,
            undefined,
            Object {
              "width": 56,
            },
          ]
        }
      />
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "height": 48,
              "justifyContent": "center",
              "position": "absolute",
              "width": 48,
            },
            Object {
              "left": 4,
              "top": -24,
            },
            undefined,
            false,
          ]
        }
      >
        <View
          onMoveShouldSetResponder={[Function]}
          onMoveShouldSetResponderCapture={[Function]}
          onResponderEnd={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderReject={[Function]}
          onResponderRelease={[Function]}
          onResponderStart={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onStartShouldSetResponderCapture={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "backgroundColor": "transparent",
                "justifyContent": "center",
              },
              Object {
                "borderRadius": 15,
              },
            ]
          }
        >
          <DefaultMarker
            currentValue={10}
            enabled={true}
            size={12}
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "height": 48,
              "justifyContent": "center",
              "position": "absolute",
              "width": 48,
            },
            Object {
              "right": 32,
              "top": -24,
            },
            undefined,
          ]
        }
      >
        <View
          onMoveShouldSetResponder={[Function]}
          onMoveShouldSetResponderCapture={[Function]}
          onResponderEnd={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderReject={[Function]}
          onResponderRelease={[Function]}
          onResponderStart={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onStartShouldSetResponderCapture={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "backgroundColor": "transparent",
                "justifyContent": "center",
              },
              Object {
                "borderRadius": 15,
              },
            ]
          }
        >
          <DefaultMarker
            currentValue={80}
            enabled={true}
            size={12}
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;
